<resources>
    <string name="app_name">5)30June_Intents_and_Intent_Filters_Validate_user_credentials_and_perform_Login_CSS_You2</string>
    <string name="get_started">GET Started</string>
    <string name="welcome_to_sign_in">Welcome To Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="confirm">Confirm</string>
</resources>