<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/welcome_to_sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/ic_carbon_user_filled"
        android:drawablePadding="20dp"
        android:hint="@string/enter_email"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_phone_number"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/ic_carbon_user_filled"
        android:drawablePadding="10dp"
        android:hint="@string/enter_age"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/ic_carbon_user_filled"
        android:drawablePadding="10dp"
        android:hint="@string/enter_gender"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BtnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:text="@string/confirm"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>